--- a/loopit/pubspec.yaml
+++ b/loopit/pubspec.yaml
@@ -95,6 +95,9 @@ flutter:
     - assets/images/fs1.png
     - assets/images/fs2.png
     - assets/images/fs3.png
+    - assets/images/hq1.png
+    - assets/images/hq2.png
+    - assets/images/hq3.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
