--- a/loopit/pubspec.yaml
+++ b/loopit/pubspec.yaml
@@ -99,6 +99,16 @@ flutter:
     - assets/images/hq1.png
     - assets/images/hq2.png
     - assets/images/hq3.png
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Poppins-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Poppins-Bold.ttf
+          weight: 700
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
