--- a/loopit/pubspec.yaml
+++ b/loopit/pubspec.yaml
@@ -99,6 +99,7 @@ flutter:
     - assets/images/hq1.png
     - assets/images/hq2.png
     - assets/images/hq3.png
+    - assets/fonts/Poppins-Regular.ttf
   fonts:
     - family: Poppins
       fonts:
