--- a/loopit/pubspec.yaml
+++ b/loopit/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   google_maps_flutter: ^2.5.0
+  # You may also need these packages for full functionality:
+  image_picker: ^1.0.4  # For picking images for delivery proof
+  permission_handler: ^11.0.1 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
