--- a/loopit/pubspec.yaml
+++ b/loopit/pubspec.yaml
@@ -58,6 +58,7 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
+    - assets/images/cream_jacket.png
     - assets/images/logo.png
     - assets/images/logo_L.png
     - assets/images/logo_oopit.png
