--- a/loopit/pubspec.yaml
+++ b/loopit/pubspec.yaml
@@ -115,7 +115,7 @@ flutter:
     - assets/images/image.png
     - assets/images/image.jpg
     - assets/images/placeholder.jpg
-    
+    - assets/default_profile.png
   fonts:
     - family: Poppins
       fonts:
