--- a/loopit/pubspec.yaml
+++ b/loopit/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.3.0
   shared_preferences: ^2.5.3
-  web_socket_channel: ^3.0.2
+  web_socket_channel: ^2.4.0
   timeago: ^3.7.0
 
 dev_dependencies:
@@ -115,6 +115,7 @@ flutter:
     - assets/images/image.png
     - assets/images/image.jpg
     - assets/images/placeholder.jpg
+    - assets/images/profile_picture.png
     - assets/default_profile.png
   fonts:
     - family: Poppins
