--- a/loopit/pubspec.yaml
+++ b/loopit/pubspec.yaml
@@ -115,6 +115,7 @@ flutter:
     - assets/images/image.png
     - assets/images/image.jpg
     - assets/images/placeholder.jpg
+    - assets/images/placeholder.png
     - assets/images/profile_picture.png
     - assets/default_profile.png
   fonts:
