--- a/loopit/pubspec.yaml
+++ b/loopit/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.5.3
   web_socket_channel: ^2.4.0
   timeago: ^3.7.0
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
