--- a/loopit/pubspec.yaml
+++ b/loopit/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   web_socket_channel: ^2.4.0
   timeago: ^3.7.0
   flutter_secure_storage: ^9.2.4
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
